FEAT-3232 Translate ALL MetraCare pages to French Reviewer RPuzikov

--- a/config/Localization/metratech.com/metratech.com_Account_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_Account_fr.xml
@@ -108,7 +108,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/account/UserName</Name>
-            <Value>Nom d’utilisateur</Value>
+            <Value>Nom d'utilisateur</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
