--- a/config/Localization/metratech.com/metratech.com_accountcreation_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_fr.xml
@@ -100,11 +100,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/address2</Name>
-            <Value>Ligne d’adresse 2</Value>
+            <Value>Ligne d'adresse 2</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/address3</Name>
-            <Value>Ligne d’adresse 3</Value>
+            <Value>Ligne d'adresse 3</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/ancestorAccount</Name>
@@ -432,7 +432,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/username</Name>
-            <Value>Nom d’utilisateur</Value>
+            <Value>Nom d'utilisateur</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/accountcreation/zip</Name>
